--- a/README
+++ b/README
@@ -4,6 +4,10 @@
 
  % ./script/plugin install git://github.com/elm200/date_helper_ja.git
 
+対応する Rails のバージョンを指定してインストールする場合は 
+
+ % ./script/plugin install git://github.com/elm200/date_helper_ja.git -r 'tag x.x.x' (x.x.x は対応する Rails のバージョン番号)
+
 == 和暦への対応
 
 f.date_select :date_of_birth, :use_era_name => true
