--- a/README
+++ b/README
@@ -36,6 +36,10 @@ datetime_select("model", "attr", :use_era_name => true, :era_format => :ja_short
 datetime_select("model", "attr", :use_era_name => true, :era_format => :alphabet)
 # => "H21年 4月 29日 13時14分"
 
+== アプリケーションテンプレート機能(Rails 2.3より使用可)を使い、サンプルアプリを作成する
+
+# rails sample -m http://github.com/elm200/date_helper_ja/raw/master/templates/date_helper_ja.rb
+
 == リンク
 
 * Rails 1.x.x に対応した DateHelperJa 旧バージョン: http://d.hatena.ne.jp/elm200/20070430/1177814782
