--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* 0.2 (2009-07-27)
+ Nothing has been changed. Just tested that this plugin is compatible with Rails 2.3.3.
+
 * 0.2 (2009-02-21)
  Second release.
  Now the plugin can be used with Rails 2.1 and Rails 2.2 (I am not sure with Rails 2.0)
