revised comment and author

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 * 0.2 (2009-07-27)
- Nothing has been changed. Tested that this plugin is compatible with Rails 2.3.2 and 2.3.3.
+ Nothing has been changed. Tested that this plugin is compatible with Rails 2.3.3.
 
 * 0.2 (2009-02-21)
  Second release.
